changed module name
changed module name of the test name compvispyhton to autosegmentation

--- a/CompVis/AutoSegmentation/CMakeLists.txt
+++ b/CompVis/AutoSegmentation/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------
-set(MODULE_NAME CompVisPython)
+set(MODULE_NAME AutoSegmentation)
 
 #-----------------------------------------------------------------------------
 set(MODULE_PYTHON_SCRIPTS
